<resources>
    <string name="app_name">México GP</string>
    <string name="facebook_app_id">801692569977560</string>
    <string name="fb_login_protocol_scheme">fb801692569977560</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuración</string>
    <string name="action_login">Iniciar sesión</string>
    <string name="user_api_token">7ce06e93bcf6634ea821ee1ff7610b6022a31a9a</string>
    <string name="google_maps_api">AIzaSyARGwm1wqxhQ6H7uqtW_J-zTYOrHWV5mxE</string>
    <string name="saltar">SALTAR</string>
    <string name="step1_number1">ACCESO DIRECTO A SECCIONES ESPECIALES PARA TI.</string>
    <string name="step1_number2_1">ÚLTIMAS NOTICIAS:</string>
    <string name="step1_number2_2">MANTENTE AL DÍA CON LA INFORMACIÓN MÁS RECIENTE.</string>
    <string name="step2_number3_1">EXPLORA:</string>
    <string name="step2_number3_2">DESCUBRE TODO EL CONTENIDO DE LA APLICACIÓN HACIENDO CLIC EN EL MENÚ.</string>
    <string name="preferencias">PREFERENCIAS</string>
    <string name="gps">GPS</string>
    <string name="activar_gps">ACTIVAR GPS</string>
    <string name="activa_gps_ahora">ACTIVAR GPS AHORA</string>
    <string name="con_esta_funcion">CON ESTA FUNCIÓN PODRÁS UBICAR TU ASIENTO, ENCONTRAR LAS MEJORES OPCIONES DE TRANSPORTE Y LA UBICACIÓN DE LOS SERVICIOS DEL AUTÓDROMO.</string>
    <string name="notificaciones">NOTIFICACIONES</string>
    <string name="notificacion1">HORARIOS</string>
    <string name="notificacion2">NOTICIAS</string>
    <string name="notificacion3">RESULTADOS</string>
    <string name="con_esta_funcion_2">CON ESTA FUNCIÓN RECIBIRÁS INFORMACIÓN EN TIEMPO REAL DE LOS EVENTOS Y SUS RESULTADOS.</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_usuario">Nombre de Usuario</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password_match">Confirmar Contraseña</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">ENTRAR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Regístrate</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_match">La contraseña es incorrecta.</string>
    <string name="error_field_length">La contraseña deberá contener 6 caracteres mínimos.</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="olvidaste_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="loginFacebookButton">REGÌSTRATE CON FACEBOOK</string>
    <string name="action_register">REGÍSTRATE</string>
    <string name="saltar_registro">SALTAR REGISTRO</string>
    <string name="registrate">REGÍSTRATE:</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="cancelar">CANCELAR</string>
    <string name="tu_asiento_se_ubica">TU ASIENTO SE UBICA EN:</string>
    <string name="ingresa_la_ubicacion">INGRESA LA UBICACIÓN DE TU ASIENTO Y DISFRUTA DE UNA EXPERIENCIA PERSONALIZADA DURANTE TU ESTANCIA EN EL AUTÓDROMO.</string>
    <string-array name="zonas_array">
        <item>VERDE</item>
        <item>AZUL</item>
        <item>ROJO</item>
    </string-array>
    <string-array name="servicios_array">
        <item>ACTIVACIONES</item>
        <item>ALIMENTOS Y BEBIDAS</item>
        <item>BAÑOS</item>
        <item>BARRA</item>
        <item>BEER GARDEN</item>
        <item>BLENDERS ROOM</item>
        <item>CAJEROS AUTOMÁTICOS</item>
        <item>ENTRADA ESTACIONAMIENTO</item>
        <item>ESCENARIO</item>
        <item>ESTACIONAMIENTO</item>
        <item>F1 GAME ZONE</item>
        <item>FOOD COURT</item>
        <item>MERCHANDISE</item>
        <item>METRO</item>
        <item>METROBUS</item>
        <item>MÓDULO DE INFORMACIÓN</item>
        <item>PARADA DE TRANSPORTE</item>
        <item>SERVICIO MÉDICO</item>
        <item>TAQUILLA</item>
    </string-array>
    <string name="zona">Zona</string>
    <string name="gradas">Gradas</string>
    <string name="seccion">Sección</string>
    <string name="fila">Fila</string>
    <string name="asiento">Asiento</string>
    <string name="bienvenido_speedlover">BIENVENIDO SPEEDLOVER</string>
    <string name="faltan">FALTAN:</string>
    <string name="noticias">ÚLTIMAS NOTICIAS</string>
    <string name="lorem_ipsum">LOREM IPSUM</string>
    <string name="como_llegar">CÓMO LLEGAR</string>
    <string name="ubica_tu_asiento">UBICA TU ASIENTO</string>
    <string name="servicios">SERVICIOS</string>
    <string name="uber">UBER</string>
    <string name="social_hub">SOCIAL HUB</string>
    <string name="encontrar">ENCONTRAR</string>
    <string name="tu_ubicacion">TU UBICACIÓN</string>
    <string name="tu_asiento">TU ASIENTO</string>
    <string name="puedes_hacer_zoom">Puedes hacer zoom para encontrar tu asiento</string>
    <string name="puedes_hacer_zoom_para_ubicarte">Puedes hacer zoom para ubicarte</string>
    <string name="horarios">HORARIOS</string>
    <string name="ver_ranking_general">VER RANKING GENERAL</string>
    <string name="ranking_general">RANKING GENERAL</string>
    <string name="buscar_piloto">Buscar Piloto</string>
    <string name="piloto_nombre">NOMBRE</string>
    <string name="piloto_numero">NÚMERO</string>
    <string name="piloto_nacionalidad">NACIONALIDAD</string>
    <string name="piloto_equipo">EQUIPO</string>
    <string name="piloto_fecha_nacimiento">FECHA DE NACIMIENTO</string>
    <string name="piloto_lugar_nacimiento">LUGAR DE NACIMIENTO</string>
    <string name="piloto_grandpix">GRANDS PRIX</string>
    <string name="piloto_campeonatos">CAMPEONATOS</string>
    <string name="piloto_podium">PODIUMS</string>
    <string name="notificacion">NOTIFICACIÓN</string>
    <string name="inicia">INICIA</string>
    <string name="album_name">ahr</string>
    <string name="comparte_guarda_foto">COMPARTE O GUARDA TU FOTO</string>
    <string name="seleccciona__creafoto">SELECCIONA UNA FOTOGRAFÍA O CREA UNA NUEVA.</string>
    <string name="tomar_foto">TOMAR FOTO</string>
    <string name="seleccionar_foto">SELECCIONAR FOTO</string>
    <string name="selecciona_arrastra_foto">SELECCIONA UN STICKER Y <ARRÁ></ARRÁ>STRALO  A TU FOTO</string>
    <string name="continuar">CONTINUAR</string>
    <string name="save">GUARDAR</string>
    <string name="share">COMPARTIR</string>
    <string name="select_picture">Selecciona una foto:</string>
    <string name="compartir_usando">Compartir</string>
    <string name="error_intro">Favor de completar los siguientes campos: </string>
    <string name="error_email">Ingrese un correo válido.</string>
    <string name="configuracion">CONFIGURACIÓN</string>
    <string name="configuracion_asiento">ASIENTO</string>
    <string name="instrucciones_asiento_conf">Iniciar sesión ó Registrarse para acceder a esta configuración. </string>
    <string name="hoteles">HOTELES</string>
    <string name="restaurantes">RESTAURANTES</string>
    <string name="a_donde_ir">A DÓNDE IR</string>
    <string name="ver_wishlist">VER WISHLIST</string>
    <string name="item_name">ARTÍCULO</string>
    <string name="item_qty">CANTIDAD</string>
    <string name="item_price">PRECIO</string>
    <string name="item_elim">    </string>
    <string name="wishlist_total">TOTAL</string>
    <string name="eliminar">X</string>
    <string name="moneda">$</string>
    <string name="prod_eliminado">¡PRODUCTO ELIMINADO!</string>
    <string name="tienda_paso_uno">PASO 1\n</string>
<string name="tpuno_instruccion">Elige lo que quieres comer</string>
    <string name="tpuno_instruccion_2">Paga en la caja más cercana</string>
    <string name="tienda_footer">TERMINA EL TUTORIAL PARA ACCEDER AL CATÁLOGO</string>
    <string name="tienda_paso_dos">PASO 2\n</string>
<string name="tpuno_instruccion2">¿Ya sabs qué pedir? \n
    Ubica desde el mapa los puntos más cercanos de venta.\n
    Ubica tu fila para comprar los tickets de comida/bebida.
<b>¡Guarda tu lista para que no se te olvide nada!</b></string>
    <string name="tuto_tip_dos"><b><font color="red">Tip.</font></b> Recuerda que existen filas diferentes para pagar con tarjeta o en efectivo.</string>
    <string name="tienda_paso_tres">PASO 3\n</string>
    <string name="tpuno_instruccion3">Canjea tu ticket</string>
    <string name="tuto_tip_tres"><b><font color="red">Tip.</font></b> Si pediste de varias marcas deberás dirigirte a la fila de correspondiente en cada caso.</string>
    <string name="tuto_termina">TERMINA EL TUTORIAL PARA ACCEDER AL CATÁLOGO</string>
    <string name="tienda_titulo">CATÁLOGO DE PRODUCTOS</string>
    <string name="menu_tienda">STORE</string>
    <string name="welcome">BIENVENIDO</string>
    <string name="welcome_speed_lover">SPEED LOVER</string>
    <string name="welcome_euphoric_fans">EUPHORIC FANS</string>
    <string name="welcome_true_racers">TRUE RACERS</string>
    <string name="welcome_vip_party_racers">VIP PARTY RACERS</string>
    <string name="forgot_password_title">¿OLVIDASTE TU CONTRASEÑA?</string>
    <string name="description_forgot_password">Pon tu dirección de correo electrónico que usaste para registrarte. Te enviaremos un mensaje con tu nombre de usuario y un enlace para restablecer tu contraseña.</string>
    <string name="action_register_long">action_register_long</string>
    <string name="enviar">ENVIAR</string>
    <string name="description_thanks_password">LOS PASOS PARA REESTABLECER TU CONTRASEÑA HAN SIDO ENVIADOS A TU CORREO ELECTRÓNICO.</string>
    <string name="desc_uber">¡PIDE TU UBER PARA LLEGAR AL GRAN PREMIO DE MÉXICO 2016!</string>
    <string name="desc_btt_1">Ya eres parte del equipo <b>Beyond The Track</b>\n
        Bienvenido al programa de lealtad que va más allá de la pista.\n\n
        Descubre el otro lado, experimenta de una forma memorable la #F1ESTA y recibe antes que nadie beneficios exclusivos. Serás el primero en disfrutar:
    </string>
    <string name="desc_btt_2">
        Venta anticipada de boletos\n
        Regalos auto\n
        Sorpresas y privilegios
    </string>
        <string name="desc_btt_3">STAY TUNED, #STAYF1RST</string>
    <string name="finalizar">FINALIZAR</string>
<string name="f1_regresa">LA FORMULA 1\n REGRESA A MÉXICO</string>
    <string name="logout">Cerrar sesión</string>
    <string name="terminos_condiciones">Términos y condiciones</string>
    <string name="aviso_de_privacidad_titulo">POLÍTICAS DE PRIVACIDAD</string>
    <string name="terminos_titulo">TÉRMINOS Y CONDICIONES</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="desc_tut_1_1">¡TÓMALO EN CUENTA!</string>
    <string name="desc_tut_1_2">
        Las bebidas (aguas, cervezas, refrescos) y botanas se entregan en los puntos de bebida\n\n
        ¡Evita filas! Realiza tus compras a tu llegada al Autódromo\n\n
        Bares y Barras cuentas con sus propias cajas\n\n
        Visita los Beer Gardens\n
        (Zonas de Hospitalidad Cervecera)
    </string>
</resources>