<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:weightSum="4"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView android:id="@+id/item_name" android:fontFamily="sans-serif-condensed" android:layout_weight="1" android:text="@string/item_name" android:textSize="15sp" android:textColor="@color/black" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:id="@+id/item_qty" android:fontFamily="sans-serif-condensed"  android:gravity="center" android:text="@string/item_qty"  android:textSize="15sp" android:textColor="@color/black" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingRight="10dp"/>
    <TextView android:id="@+id/item_price" android:fontFamily="sans-serif-condensed"  android:gravity="center" android:text="@string/item_price"  android:textSize="15sp" android:textColor="@color/black" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:id="@+id/item_elim" android:fontFamily="sans-serif-condensed" android:layout_weight="1" android:gravity="center" android:text="@string/item_elim"  android:textSize="15sp" android:textColor="@color/black" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</TableRow>