<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/black_texture"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_btt"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/desc_btt_1"
        android:gravity="center_horizontal"
        android:paddingStart="40dp"
        android:paddingEnd="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/desc_btt_2"
        android:gravity="center_horizontal"
        android:paddingStart="40dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:text="@string/desc_btt_3"
        android:gravity="center_horizontal"
        android:paddingStart="40dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />
</LinearLayout>