<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_tienda_tuto">

    <LinearLayout
        android:id="@+id/tuto_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:baselineAligned="false"
        android:paddingTop="20dp"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tienda_paso_tres"
            android:gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="17sp"
            android:textStyle="bold"
            />

    </LinearLayout>
    <ScrollView
        android:id="@+id/img_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tuto_title"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:verticalScrollbarPosition="defaultPosition"
        android:isScrollContainer="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="fill_vertical">

                <TextView
                    android:id="@+id/paso2desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:text="@string/tpuno_instruccion3"
                    android:textStyle="bold"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginBottom="20dp"
                    />

                <ImageView
                    android:id="@+id/tienda_tutoimg3"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:layout_below="@+id/paso2desc"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_below="@+id/tienda_tutoimg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_tut_1_1"
                    android:textColor="@color/red"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp"
                    android:id="@+id/desc_tut_3"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_below="@+id/desc_tut_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_tut_1_2"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/container_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingBottom="20dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/next_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/finalizar"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                android:onClick="EndViewPager"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp"/>

            <TextView
                android:id="@+id/tip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuto_termina"
                android:textColor="@color/text_grey"
                android:textSize="10sp"
                android:layout_below="@+id/next_view"
                android:gravity="center_horizontal"
                />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>