<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_registro"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    android:gravity="center_horizontal"
    >
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_f1"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_usuario"
                    android:textColorHint="#FFFFFF"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColorHint="#FFFFFF"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:background="@color/red"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/olvidaste_password"
                android:autoLink="web"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:gravity="center"
                android:linksClickable="true"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="16dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/text_grey"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginTop="20dp"
                >
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fbLoginButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    style="@style/FacebookLoginButton"
                    android:scaleType="centerInside" />
            </LinearLayout>
            <Button
                android:id="@+id/register_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:background="@color/text_grey"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saltar_registro"
                android:layout_centerInParent="true"
                android:textColor="@color/text_grey"
                android:gravity="center"
                android:linksClickable="true"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

